modals close buttons and scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,16 @@
         sans-serif;
 }
 
-::-webkit-scrollbar {
-    width: 15px;
-    height: 100%;
-    background: transparent;
-}
+@media (hover: hover) and (pointer: fine) {
+    ::-webkit-scrollbar {
+        width: 15px;
+        height: 100%;
+        background: transparent;
+    }
 
-::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.4);
+    ::-webkit-scrollbar-thumb {
+        background: rgba(255, 255, 255, 0.4);
+    }
 }
 
 a {
